kakao-clone CSS
CSS

--- a/friends.html
+++ b/friends.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Friends | Kakao Clone</title>
     <script
       src="https://kit.fontawesome.com/7e25b6e71f.js"
@@ -42,7 +43,7 @@
       <header class="friends__header">
         <div class="friends__friend friend friend--lg">
           <div class="friend__column">
-            <img class="chat__avatar g-avatar" src="images/avatar.jpg" />
+            <img class="g-avatar friend__avatar" src="images/avatar.jpg" />
             <div class="friend__content">
               <span class="friend__name">
                 Minseok Kim
@@ -58,7 +59,7 @@
         <h5 class="friends__title">Plus friend</h5>
         <div class="friends__friend friend">
           <div class="friend__column">
-            <img class="chat__avatar g-avatar" src="images/avatar.jpg" />
+            <img class="friend__avatar" src="images/avatar.jpg" />
             <div class="friend__content">
               <span class="friend__name">
                 Plus Friend
@@ -71,7 +72,7 @@
         <h5 class="friends__title">Friends 14</h5>
         <li class="friends__friend friend friend--lg">
           <div class="friend__column">
-            <img class="chat__avatar g-avatar" src="images/avatar.jpg" />
+            <img class="friend__avatar" src="images/avatar.jpg" />
             <div class="friend__content">
               <span class="friend__name">
                 Minseok Kim
@@ -99,6 +100,7 @@
         </li>
         <li class="nav__list-item">
           <a href="index.html" class="nav__list-link">
+            <div class="nav__badge">8</div>
             <i class="far fa-comment"></i>
           </a>
         </li>
