--- a/more.html
+++ b/more.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>More | Kakao Clone</title>
     <script
       src="https://kit.fontawesome.com/7e25b6e71f.js"
@@ -45,7 +46,7 @@
       <header class="more__header">
         <div class="friends__friend friend friend--lg">
           <div class="friend__column">
-            <img class="chat__avatar g-avatar" src="images/avatar.jpg" />
+            <img class="friend__avatar g-avatar" src="images/avatar.jpg" />
             <div class="friend__content">
               <span class="friend__name">
                 Minseok Kim
@@ -119,6 +120,7 @@
         </li>
         <li class="nav__list-item">
           <a href="index.html" class="nav__list-link">
+            <div class="nav__badge">8</div>
             <i class="far fa-comment"></i>
           </a>
         </li>
