completed find section (CSS)
completed find section (CSS)

--- a/find.html
+++ b/find.html
@@ -43,34 +43,34 @@
       <header class="find__header">
         <ul class="find__header-list">
           <li class="friend__header-btn hdeader-btn">
-            <span class="header-btn icon">
+            <span class="header-btn__icon">
               <i class="fas fa-qrcode fa-2x"></i>
             </span>
-            <span class="hdeader-btn__title">
+            <span class="header-btn__title">
               QR Code
             </span>
           </li>
           <li class="friend__header-btn hdeader-btn">
-            <span class="header-btn icon">
+            <span class="header-btn__icon">
               <i class="fas fa-user-plus fa-2x"></i>
             </span>
-            <span class="hdeader-btn__title">
+            <span class="header-btn__title">
               Add by Contact
             </span>
           </li>
           <li class="friend__header-btn hdeader-btn">
-            <span class="header-btn icon">
+            <span class="header-btn__icon">
               <i class="far fa-id-card fa-2x"></i>
             </span>
-            <span class="hdeader-btn__title">
+            <span class="header-btn__title">
               Find by ID
             </span>
           </li>
           <li class="friend__header-btn hdeader-btn">
-            <span class="header-btn icon">
+            <span class="header-btn__icon">
               <i class="fas fa-envelope fa-2x"></i>
             </span>
-            <span class="hdeader-btn__title">
+            <span class="header-btn__title">
               Invite
             </span>
           </li>
