--- a/friends.html
+++ b/friends.html
@@ -41,7 +41,7 @@
     </header>
     <main class="friends">
       <header class="friends__header">
-        <div class="friends__friend friend friend--lg">
+        <div class="friends__friend friend">
           <div class="friend__column">
             <img class="g-avatar friend__avatar" src="images/avatar.jpg" />
             <div class="friend__content">
@@ -75,17 +75,19 @@
             <img class="friend__avatar" src="images/avatar.jpg" />
             <div class="friend__content">
               <span class="friend__name">
-                Minseok Kim
+                Mio
               </span>
               <span class="friend__status">
-                Good morning
+                Going home!
               </span>
             </div>
           </div>
           <div class="friend__column">
             <div class="friend__now-listening">
-              <span>FTISLAND (FT. MINSEOK KIM)</span>
-              <i class="fas fa-play"></i>
+              <span
+                >FTISLAND (FT. MINSEOK KIM)
+                <i class="fas fa-play"></i>
+              </span>
             </div>
           </div>
         </li>
