--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                 </div>
               </div>
               <div class="friend__column">
-                <div class="friend__now-listening">
+                <div class="friend__right-status">
                   <span class="chat__timestamp">
-                    March
+                    March 8
                   </span>
                 </div>
               </div>
