modified chatroom little bit

--- a/chatroom.html
+++ b/chatroom.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
+  <body class="chats-body">
     <div class="status-bar">
       <div class="status-bar__column">
         <span class="status-bar__clock">13:53</span>
@@ -29,7 +29,7 @@
         <a href="index.html" class="header__back-btn">
           <i class="fas fa-arrow-left"></i>
         </a>
-        <h1 class="header__title">Best Friend</h1>
+        <h1 class="header__title">Mio Ueoka</h1>
       </div>
       <div class="header__header-column">
         <span class="header__icon">
@@ -40,13 +40,13 @@
         </span>
       </div>
     </header>
-    <main class="chat">
+    <main class="chatroom">
       <ul class="chat__messages">
-        <span class="chat__timestamp">Friday,January 11,2019</span>
+        <span class="chat__timestamp">Friday, January 11, 2020</span>
         <li class="incoming-message message">
-          <img src="images/avatar.jpg" class="m-avatar message__avatar" />
+          <img src="images/mio.jpg" class="m-avatar message__avatar" />
           <div class="message__content">
-            <span class="message__author">Best Friend</span>
+            <span class="message__author">Mio Ueoka</span>
             <div class="message__bubble">
               Congrats I love you!
             </div>
