--- a/friends.html
+++ b/friends.html
@@ -72,7 +72,9 @@
         <h5 class="friends__title">Friends 14</h5>
         <li class="friends__friend friend friend--lg">
           <div class="friend__column">
-            <img class="friend__avatar" src="images/avatar.jpg" />
+            <a href="chatroom.html">
+              <img class="friend__avatar" src="images/mio.jpg" />
+            </a>
             <div class="friend__content">
               <span class="friend__name">
                 Mio
