--- a/index.html
+++ b/index.html
@@ -45,28 +45,28 @@
     <main class="chats">
       <ul class="chats__list">
         <li class="chats__chat chat">
-          <a href="chat.html">
-            <div class="chats__chat friend friend--lg">
-              <div class="friend__column">
-                <img src="images/avatar.jpg" class="m-avatar friend__avatar" />
-                <div class="friend__content">
-                  <span class="friend__name">
-                    mio
-                  </span>
-                  <span class="friend__bottom-text">
-                    going home!
-                  </span>
-                </div>
-              </div>
-              <div class="friend__column">
-                <div class="friend__right-status">
-                  <span class="chat__timestamp">
-                    March 8
-                  </span>
-                </div>
+          <div class="chats__chat friend friend--lg">
+            <div class="friend__column">
+              <a href="chatroom.html">
+                <img src="images/mio.jpg" class="m-avatar friend__avatar" />
+              </a>
+              <div class="friend__content">
+                <span class="friend__name">
+                  mio
+                </span>
+                <span class="friend__bottom-text">
+                  thank you see you
+                </span>
               </div>
             </div>
-          </a>
+            <div class="friend__column">
+              <div class="friend__right-status">
+                <span class="chat__timestamp">
+                  March 8
+                </span>
+              </div>
+            </div>
+          </div>
         </li>
       </ul>
     </main>
