--- a/settings.html
+++ b/settings.html
@@ -60,6 +60,28 @@
           </li>
         </ul>
       </section>
+      <section class="settings__sections">
+        <ul class="settings__list">
+          <li class="settings__setting">
+            <span class="settings__icon">
+              <i class="fas fa-lock"></i>
+            </span>
+            <span class="settings__title">kim970602@gmail.com</span>
+          </li>
+          <li class="settings__setting">
+            <span class="settings__icon">
+              <i class="far fa-bell"></i>
+            </span>
+            <span class="settings__title">Minseok Kim</span>
+          </li>
+          <li class="settings__setting">
+            <span class="settings__icon">
+              <i class="fas fa-user-friends"></i>
+            </span>
+            <span class="settings__title">HTML,CSS</span>
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
