--- a/chatroom.html
+++ b/chatroom.html
@@ -40,25 +40,43 @@
         </span>
       </div>
     </header>
-    <main class="chatroom">
+    <main class="chat-screen">
       <ul class="chat__messages">
         <span class="chat__timestamp">Friday, January 11, 2020</span>
         <li class="incoming-message message">
           <img src="images/mio.jpg" class="m-avatar message__avatar" />
           <div class="message__content">
             <span class="message__author">Mio Ueoka</span>
-            <div class="message__bubble">
+            <span class="message__bubble">
               Congrats I love you!
-            </div>
+            </span>
           </div>
           <span class="message__timestamp"></span>
         </li>
-        <li class="incoming-message message">
+        <li class="sent-message message">
           <span class="message__timestamp"></span>
           <div class="message__content">
-            <div class="message__bubble">
+            <span class="message__bubble">
               thank you see you soon!
-            </div>
+            </span>
+          </div>
+        </li>
+        <li class="incoming-message message">
+          <img src="images/mio.jpg" class="m-avatar message__avatar" />
+          <div class="message__content">
+            <span class="message__author">Mio Ueoka</span>
+            <span class="message__bubble">
+              Congrats I love you!
+            </span>
+          </div>
+          <span class="message__timestamp"></span>
+        </li>
+        <li class="sent-message message">
+          <span class="message__timestamp"></span>
+          <div class="message__content">
+            <span class="message__bubble">
+              thank you see you soon!
+            </span>
           </div>
         </li>
       </ul>
@@ -70,7 +88,7 @@
       <div class="chat__write-column">
         <input
           type="text"
-          placeholder="Send message"
+          placeholder="Send Message"
           class="chat__write-input"
         />
       </div>
